# neural-amp-modeler-wasm

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: NamModel.ts  NamWasmModule.ts  index.ts
ui/: package.json
ui/public/: t3k-wasm-module.js
ui/public/inputs/: README.md
ui/public/irs/: README.md
ui/public/models/: 5153.nam  README.md
ui/src/: index.ts  preview.tsx
ui/src/components/Player/: AcordianPlayer.tsx  Player.tsx  PlayerSkeleton.tsx  SlimPlayer.tsx
ui/src/components/ui/: Skip.tsx
ui/src/constants/: index.ts
ui/src/types/: index.ts
wasm/: CMakeLists.txt  build-nam.bash  nam-multi-instance.cpp
